--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
                 <div class="puntos puntos-top"></div>
               </div>
               <div class="col p-0">
-                <img class="mt-xl-5" alt="logo Sena" src="./assets/img.jpg" />
-
+                <img class="mt-xl-5" alt="logo Sena" src="./assets/img2.png" />
                 <div class="header__logo">
                   <img alt="logo Sena" src="./assets/logo-sena.svg" />
                 </div>
@@ -49,7 +48,7 @@
                   </div>
                   <div class="tarjeta__action">
                     <button class="boton video-btn" type="button" data-bs-toggle="modal"
-                      data-src="https://www.youtube.com/embed/Jfrjeg26Cwk" data-bs-target="#myModal">
+                      data-src="https://www.youtube.com/embed/_6dym1GLsfg" data-bs-target="#myModal">
                       <span>Reproducir video</span>
                       <img src="./assets/ico-flecha.svg" />
                     </button>
@@ -96,7 +95,7 @@
                   <div class="contenido__footer__item__img me-3"><img src="./assets/ico-modalidad.svg"
                       style="width: 62px" /></div>
                   <div class="contenido__footer__item__text">
-                    <h4 class="mb-1">Modalidad</h4><span>Virtual</span>
+                    <h4 class="mb-1">Modalidad</h4><span>virtual</span>
                   </div>
                 </div>
               </div>
@@ -113,7 +112,7 @@
             </div>
           </div>
           <div class="col-lg-auto tarjeta naranja p-0 d-flex justify-content-center">
-            <a href="descargas/Informacion_Programa_Estrategia_de_email_marketing_para_pymes.pdf" target="_blank" class="boton-footer py-4 px-5 button-jittery">
+            <a href="descargas/Informacion_Programa.pdf" target="_blank" class="boton-footer py-4 px-5 button-jittery">
               <div class="contenido__footer__item">
                 <div class="contenido__footer__item__img me-3"><img src="./assets/ico-descarga.svg"
                     style="width: 62px" />
@@ -251,7 +250,7 @@
 
     .boton {
       background-color: white;
-      border: 3px solid #f36d21;
+      border: 3px solid #3BA800;
       display: flex;
       padding: 10px;
       border-radius: 30px;
@@ -272,7 +271,7 @@
     }
 
     .naranja {
-      background-color: #f36d21 !important;
+      background-color: #3BA800  !important;
     }
 
     a {
